--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./Aarohan Gupta.pdf')"
+            onclick="window.open('./Resume.pdf')"
           >
             Download CV
           </button>
@@ -106,7 +106,7 @@
           <div class="text-container">
             <p>Heya!
                 I am Aarohan Gupta, a UG Student at IIT Guwahati, India.
-                I am interested in lifesciences, Finance, Counsulting and Computational Research, and hoping to discover more.
+                I am interested in Life Sciences, Finance, Counsulting and Computational Research, and hoping to discover more.
             </p>
             <br>
             <p>
